<resources>
    <string name="app_name">ConflictWatcher</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_conflict_syria">ConflictSyria</string>
    <string name="syria_text_1">
        The Syrian Civil war is a currently ongoing civil war fought in Syria between multiple sides. This conflict originated from the wide wave of Arab Spring protests in 2011. These protests grew out of dissatisfaction
        with the Syrian Government, and it has massively escalated after the Government violently suppressed the protests demanding removal of the president, Bashar Al-Assad. \n\n

        The conflict has been ongoing since early 2011, and is currently the second deadliest in the 21st century. This conflict is especially of importance due to the large number of outside actors that are investing military manpower,
        and financially supporting various factions. In effect, the Syrian Civil War is another proxy war with various countries around the world contributing to it.

    </string>
    <string name="syria_text_2">There are 4 main belligerents in this war, with each having various support from other countries: \n\n
         Syrian Arab Republic:\n Known as the Government &amp; Pro-Assad forces. They recognise Bashar Al-Assad and his government as the rightful leaders of Syria. Pro-Assad forces are fighting to preserve Assad as president,
        and claim the whole of Syria as theirs. Their main external supporters are Russia, Iran and various Shia Islamist groups. \n\n

        Rebel Forces:\n This comprises various groups that are against the Assad government. There are many organisations within this, such as moderate groups, and Sunni Jihadist groups such as Ahrar al-Sham and HTS(Hayat Tahrir Al-Sham).
        These groups believe in the establishment of a state based on a strict interpretation of Sunni Islam and claim to be religiously oppressed by the Assad Regime.\n
         Each of these rebel groups has various supporters including Turkey, Qatar, Saudi Arabia and The United States.\n\n

        Islamic State of Iraq and Levant: \n
        Known by its various names including ISIS, ISIL, Daesh or simply IS(Islamic State), is a militant group which follows a hard line salafi jihadist doctrine of Sunni Islam. They established an Islamic Caliphate during 2014
        and very notorious for their propaganda videos and actions against anyone it deemed to be their enemy. IS fought actively against every side in this war, even other Sunni jihadist groups. As of 2020 virtully all of their territory
        has been recaptured and they only operate as an underground terrorist organisation.\n
        The Islamic State doesn\'t have any official state support, but a large number of people moved to Syria and Iraq to fight for the group. \n\n


        Rojava: \n
        Rojava, or the SDF(Syrian Democratic Forces) is an alliance of primarily Kurdish, Arab and Syyrian militias, fighting to create a democratic and secular Syria. They primarily fought against IS, successfuly dirving them out of
        large parts of Syria, with the help of Coalition Forces. However, many groups are hostile towards them, including Turkey and Syrian Rebel groups. The SDF has not actively fought against the Syrian Government apart from minor clashes.\n
        Their main supporters are the CJTF-OIR, an international coalition including the USA, France and UK amongst many others. \n\n

        The diagram below shows an outline of the different groups involved in the war and how they relate to each other. Note that \'Jabhat Fateh al Sham\' is the former name for the group known as HTS/ Al-Qaeda in Syria.

    </string>
    <string name="action_settings">Settings</string>
    <string name="syria_text_3">The toll on human life in the war has been staggering. Since the beginning, an estimated 570,000 people have died as a result. The war is still seeing significant battles, as the month of January 2020
        saw 1,200 fatalities. There has also been a vast refugee crisis, with more than 6 million people internally displaced, and 5 million fleeing to other countries.\n\n

    The economy of the country has  been devastated  due to the war, also because of sanctions, such as from the US Government. While this is intended to impede the Syrian Government\'s power and authority, it can have a negative effect to
        the people of Syria. It can decrease their economic resources, and increase their reliance on the government.\n\n

    In 2018, the World Bank estimated that about half of the country\'s health and education facilities, and a third of it\'s housing stock has been destroyed by the conflict. An estimated $226 million in GDP has been lost due to the conflict,
        only between 2011 and 2016.
    </string>
    <string name="syria_text_4">As of 2020, there is still active fighting between the Government and rebels, and between the SDF and rebels and Turkey. There have been many initiatitives to broker a peacefire, but they either
        fail or do not last.\n\n

        However, with the Syrian Government and SDF controlling the majority of the country, and their relative neutrality against each other, there is a lack of active fighting in the majority of the country. The Government and SDF is
        currently in negotiation in order to reach a solution between the two entities.
    </string>
    <string name="activity_conflicts_text">Armed conflicts are hositlities that involve governments, militias and other armed groups. This application focuses on some of the most significant conflicts around the world.
        These are all conflicts which had more than 1000 deaths in 2019, and are considered to be "wars" by the Uppsala conflict Data Program. The buttons below allow you to learn about these conflicts, and the
        effects they had on countries:

    </string>
    <string name="afghan_text_1">The Afghanistan conflict consists of a series of wars that has plagued Afghanistan since 1978. It involves various major conflicts, including the Soviet-Afghan War, The Afghan Civil War, as well as the USA\'s invasion and war in the country</string>
    <string name="afghan_text_2">Currently, much of the country is controlled by the NATO backed government, called the Islamic Republic of Afghanistan. This group worked together with Western forces in 2001 to overthrow the Taliban led government, known as the Islamic Emirate of Afghanistan. \n\n Currently the Taliban only holds smaller territories throughout the country, primarily in mountainous areas. The Taliban is a Sunni fundamentalist movement, which believes in establishing a state based on Sharia/Islamic law. The group also worked alongside other Jihadist groups, such as Al-Qaeda and the Islamic State.  </string>
    <string name="afghan_text_3">The conflict has caused devastating effects on the country. Since the start of hostilities in 1978, an estimated 1.4–2 Million people have lost their lives. The war has resulted in millions of refuges, and has devastated Afghanistan\'s economy. \n\n In terms of Human Development Index, Afghanistan ranks one of the lowest, in the 170th place out of 189 countries. Due to all the instability, Afghanistan also has the least valuable Passport in the world, joined with Iraq. This has made it more difficult for Afghanis to travel and conduct business abroad. </string>
    <string name="afghan_text_4">In 2019 the US and Taliban planned negotiations to reduce troop levels in Afghanistan, however Trump cancelled the negotiations due to a Taliban attack. In February 2020 the US and Taliban signed a conditional peace deal, which intended for US troops to withdraw from Afghanistan. However, shortly after Taliban carried out attacks, creating much uncertainty for the possibility of stability in the country.</string>
    <string name="iraq_text_1"> This is a long-running conflict that began with the 2003 invasion of Iraq led by the United States in order to overthrow Saddam Hussein and his government. This resulted in a continuous insurgency</string>
    <string name="iraq_text_2">There have been various participants with differing allegiance throughout the conflict. In the 2003 invasion phase, it was primarily the US based coalition, against Saddam\'s government. After the invasion, a new Iraqi government was formed, which fought against Saddam loyalists and insurgents with the help of the Coalition, which included 42 countries! \n\n The Kurds gained a lot of power after Saddam\'s fall, and formed their own autonomous government, known as Kurdistan Region. The Kurds, along with Iraqi and Coalition forces fought extensively against Islamic State after its establishment and spread. </string>
    <string name="iraq_text_3">Almost 300,000 people have lost their lives due to the conflict since 2003. The effects on infrastructure and economy has been immense. Close to 4 million people have been misplaced, and a third of the country\'s population is living in poverty. \n\n The state of the economy has resulted in unemployment levels as high as 60% in the country.The Islamic State\'s control also led to various historical, and important buildings being destroyed, including Shia mosques, churches, and ancient structures.</string>
    <string name="iraq_text_4">With Islamic State being largely defeated by 2017, the level of fighting has dramatically decreased in the country. However, IS has continued a low-level insurgency, carrying out Terrorist attacks in the country. Protests since 2019 have also resulted in a large number of deaths, as the people if Iraq demand change in their country.  </string>
    <string name="kurdturk_text_1">The Kurdish-Turkish conflict is an armed conflict between Turkey and Kurdish groups based in Turkey. While much of the conflict is situated in East and Southeast Turkey, there are spillovers in Northern Iraq and Northern Syria, due to Kurdish groups situated there.</string>
    <string name="kurdturk_text_2">There are 2 main belligerents in this conflict, Turkey and Kurdish people, primarily headed by the KCK (Kurdistan Communities Union). Turkey wishes to maintain the status of their state, in terms of territory and population. However, The Kurds wish to secede, or gain autonomy due to being a different ethnicity, an in turn having their own identity. \n\n This has caused serious clashes between the 2 entities. The Kurds are alleged to have support from various states, including Greece, Russia and Iran. </string>
    <string name="kurdturk_text_3">The conflict has created large effects on Turkey, and especially on Kurdish inhabited areas. There are an estimated 50–55 thousand killed due to the conflict with more than 3 million being displaced. \n\n There have been also up to 20,000 kurds executed and 2–4 thousand villages destroyed by the Turkish government, as they attempt to supress Kurdish independence attempts.</string>
    <string name="kurdturk_text_4">In 2012, the Turkish Government was in the process of conducting negotiations with Abdullah Ocalan (Kurdish leader). In 2013 a cease-fire was established, but hostilities started again in 2014. Since then conflict has been ongoing with Kurds, both within Turkey and Kurdish forces in neighbouring Syria.</string>
    <string name="libya_text_1">The Libyan Civil War is currently in it\'s second phase, after the successful overthrow of former Prime Minister of Libya, Muammar Gaddafi. The rebels who overthrew Gaddafi and his government have splintered and are now fighting for control of Libya.</string>
</resources>